--- a/Thymeleaf/src/main/resources/application.properties
+++ b/Thymeleaf/src/main/resources/application.properties
@@ -1,1 +1,6 @@
-
+#
+# JDBC properties
+#
+spring.datasource.url=jdbc:mysql://localhost:3306/book_directory
+spring.datasource.username=springboot
+spring.datasource.password=springboot
